Fixed layout issue in the input group

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -115,6 +115,7 @@ h2 {
 
 .input-group .input {
     border: 0;
+    width: 0;
     flex-grow: 1;
     padding: 1rem 1.6rem;
     background-color: var(--color-primary);
